--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
 	},
 	"private": true,
 	"dependencies": {
-		"gsap": "^3.12.2"
+		"@types/three": "^0.159.0",
+		"dat.gui": "^0.7.9",
+		"gsap": "^3.12.2",
+		"three": "^0.159.0"
 	},
 	"devDependencies": {
+		"@types/dat.gui": "^0.7.12",
 		"@types/node": "^20.9.4",
 		"@typescript-eslint/eslint-plugin": "^6.12.0",
 		"@typescript-eslint/parser": "^6.12.0",
