--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@types/three": "^0.159.0",
 		"dat.gui": "^0.7.9",
 		"gsap": "^3.12.2",
+		"openmeteo": "^1.1.3",
 		"three": "^0.159.0"
 	},
 	"devDependencies": {
