--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
 	"type": "commonjs",
 	"scripts": {
 		"dev": "./node_modules/.bin/webpack serve --mode development --hot --port=8080 --entry=./src/creatives/$npm_config_target",
-		"armani": "npm run build --target=2023/Luxury_Armani_Noel_Interactive_Custom_2311_CAMPAIGN_FR_30s/creative.ts",
-		"example": "./node_modules/.bin/webpack serve --mode development --hot --port=8080 --entry=./src/creatives/examples/videoControls/creative.ts",
+		"dev2": "./node_modules/.bin/webpack serve --mode development --hot --port=8080 --entry=./src/creatives/2024/Entertainement_Paramount_Plus_Halo_Interactive_Countdown_2401_CAMPAIGN_FR_15s/creative.ts",
 		"build": "webpack --mode production --entry=./src/creatives/$npm_config_target",
+		"build2": "npm run build --target=2024/Entertainement_Paramount_Plus_Halo_Interactive_Countdown_2401_CAMPAIGN_FR_15s/creative.ts",
 		"lint:check": "eslint . --ext .ts",
 		"lint:fix": "eslint . --ext .ts --fix"
 	},
