--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
 	"scripts": {
 		"dev": "./node_modules/.bin/webpack serve --mode development --hot --port=8080 --entry=./src/creatives/$npm_config_target",
 		"dev2": "./node_modules/.bin/webpack serve --mode development --hot --port=8080 --entry=./src/creatives/2024/Entertainement_Paramount_Plus_Halo_Interactive_Countdown_2401_CAMPAIGN_FR_15s/creative.ts",
-		"dev3": "./node_modules/.bin/webpack serve --mode development --hot --port=8080 --entry=./src/creatives/examples/collection.ts",
+		"dev3": "./node_modules/.bin/webpack serve --mode development --hot --port=8080 --entry=./src/creatives/examples/collectionMizuno.ts",
 		"build": "webpack --mode production --entry=./src/creatives/$npm_config_target",
 		"build2": "npm run build --target=2024/Entertainement_Paramount_Plus_Halo_Interactive_Countdown_2401_CAMPAIGN_FR_15s/creative.ts",
+		"build3": "npm run build --target=examples/collectionMizuno.ts",
 		"lint:check": "eslint . --ext .ts",
 		"lint:fix": "eslint . --ext .ts --fix"
 	},
